모집 공고 조회시 studygroup.meetingdays 응답하도록 수정